# site2vault

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  site2vault-architecture.md  site2vault-assignment.md  site2vault-claude-tips.md  site2vault-improvements-assignment.md  site2vault.cmd  site2vault.spec
QA/code-claude-com/: Claude Code by Anthropic AI Coding Agent, Terminal, IDE.md  Index.md
QA/code-claude-com/docs/: Claude Code overview - Claude Code Docs.md  Index.md
QA/code-claude-com/docs/en/: Advanced setup - Claude Code Docs.md  Authentication - Claude Code Docs.md  CLI reference - Claude Code Docs.md  (+80 more)
docs/: README.md  architecture.md  cli-reference.md  development.md  troubleshooting.md
docs/diagrams/: crawl-loop.mmd  link-rewrite.mmd  pipeline.mmd
src/site2vault/: __init__.py  antibot.py  boilerplate.py  boilerplate_patterns.py  canonical.py  chunking.py  cli.py  config.py  convert.py  crawler.py  exit_codes.py  extract.py  frontmatter.py  index.py  logging_setup.py  manifest.py  orchestrator.py  politeness.py  progress.py  render_js.py  rewrite.py  robots.py  sitemap.py  slug.py  state.py
tests/: test_antibot.py  test_boilerplate.py  test_canonical.py  test_chunking.py  test_conditional_get.py  test_convert.py  test_exit_codes.py  test_extract.py  test_integration.py  test_manifest.py  test_namespace.py  test_politeness.py  test_progress.py  test_refresh.py  test_rewrite.py  test_scope.py  test_single.py  test_sitemap.py  test_slug.py  test_state.py
tests/fixtures/static_site/: about.html  index.html  redirect-target.html  robots.txt
(+238 files in other folders)
