[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "site2vault"
version = "0.1.0"
requires-python = ">=3.11"
description = "Mirror any website into a linked Obsidian vault."
license = { text = "MIT" }
dependencies = [
    "typer>=0.12",
    "httpx[http2]>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "trafilatura>=1.12",
    "markdownify>=0.13",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
js = ["playwright>=1.45"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-httpx>=0.30", "ruff>=0.5"]

[project.scripts]
site2vault = "site2vault.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
